<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="24dp"
    tools:context=".LaunchActivity"
    tools:ignore="ExtraText">


    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/app_name"
        android:textColor="@color/text_primary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/statusTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/status_not_connected"
        android:textAlignment="center"
        android:textColor="@color/text_secondary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/ipAddressEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ipAddressEditText"
        android:layout_width="340dp"
        android:layout_height="65dp"
        android:background="@drawable/edittext_border_bg"
        android:hint="@string/ip_hint"
        android:inputType="phone"
        android:maxLines="1"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/connectButton"
        android:layout_width="340dp"
        android:layout_height="65dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/accent_primary"
        android:paddingVertical="12dp"
        android:text="@string/connect_button_text"
        android:textColor="@color/text_primary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipAddressEditText" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:backgroundTint="@color/accent_hot"
        app:layout_constraintBottom_toTopOf="@+id/appTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/smart" />

    <TextView
        android:id="@+id/footerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/SMARTMINDS"
        android:textColor="@color/accent_hot"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>